--- a/action.yml
+++ b/action.yml
@@ -10,8 +10,9 @@ inputs:
   staging_repository_id: 
     description: 'The ID of the staged repository to drop.'
     required: true
-  base_url: 
+  base_url:
     description: 'The url of your nexus repository, defaults to OSSRH (https://oss.sonatype.org/service/local/)'
+    required: true
     default: 'https://oss.sonatype.org/service/local/'
 runs:
   using: 'docker'
